add execution tasks